Fix blurry text in the new recipe form while overflowing, rename a mixin

--- a/src/components/LangSelector/styles.scss
+++ b/src/components/LangSelector/styles.scss
@@ -2,7 +2,7 @@
 @use "./../../sass/variables" as *;
 
 .langSelector {
-  @include m.pop-up;
+  @include m.borders;
   display: flex;
   flex-direction: column;
   position: absolute;
