--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -18,16 +18,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
     z-index: 4;
+    pointer-events: none;
+    display: grid;
+    place-items: center;
 
     .modal__body {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      -moz-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
       background-color: $white;
       width: 95%;
       max-width: 750px;
@@ -35,24 +32,20 @@
       pointer-events: all;
       max-height: 90vh;
       overflow: auto;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      outline: none;
-      border-radius: 5px;
+      border-bottom-left-radius: 10px;
+      border-top-left-radius: 10px;
       padding: 5px;
 
       .modal__close {
+        @include m.borders;
         position: absolute;
         font-size: 20px;
-        cursor: pointer;
         right: 10px;
         top: 10px;
-        outline: 1px solid black;
-        border-radius: 5px;
-        background-color: $color-secondary;
+        cursor: pointer;
 
         &:hover {
-          opacity: 0.8;
+          background-color: $gray-hover;
         }
       }
     }
