--- a/src/components/ProfilePopup/styles.scss
+++ b/src/components/ProfilePopup/styles.scss
@@ -2,7 +2,7 @@
 @use "./../../sass/variables" as *;
 
 .profilePopup {
-  @include m.pop-up;
+  @include m.borders;
   display: flex;
   flex-direction: column;
   position: absolute;
