--- a/src/components/RecipeRework/styles.scss
+++ b/src/components/RecipeRework/styles.scss
@@ -2,7 +2,7 @@
 @use "/src/sass/mixins" as m;
 
 .recipe {
-  @include m.pop-up;
+  @include m.borders;
   flex: 1;
   padding: 10px;
   flex: 0.8;
@@ -96,7 +96,7 @@
         padding: 5px;
 
         .recipe__tag {
-          @include m.pop-up;
+          @include m.borders;
           user-select: none;
         }
       }
@@ -109,7 +109,7 @@
       padding: 5px;
 
       .recipe__action {
-        @include m.pop-up;
+        @include m.borders;
         display: flex;
         flex-direction: column;
         align-items: center;
