--- a/src/components/forms/TextEditor/styles.scss
+++ b/src/components/forms/TextEditor/styles.scss
@@ -32,6 +32,7 @@
     border-bottom-left-radius: 10px;
     font-size: 16px;
     color: black;
+    pointer-events: all;
 
     a {
       color: $link;
